// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render "" correctly 1`] = `
<button
  className="Button sc-bdVaJa bDWFJH flex-no-shrink "
>
  <div
    className="flex layout-centered"
    style={null}
  >
    <div
      className=""
    >
      Clickity click
    </div>
  </div>
</button>
`;

exports[`Button should render "primary" correctly 1`] = `
<button
  className="Button sc-bdVaJa bDWFJH flex-no-shrink Button--primary"
>
  <div
    className="flex layout-centered"
    style={null}
  >
    <div
      className=""
    >
      Clickity click
    </div>
  </div>
</button>
`;

exports[`Button should render "with an icon" correctly 1`] = `
<button
  className="Button sc-bdVaJa bDWFJH flex-no-shrink "
>
  <div
    className="flex layout-centered"
    style={null}
  >
    <svg
      className="Icon Icon-star Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={14}
      viewBox="0 0 32 32"
      width={14}
    >
      <path
        d="M16 0 L21 11 L32 12 L23 19 L26 31 L16 25 L6 31 L9 19 L0 12 L11 11"
      />
    </svg>
    <div
      className="ml1"
    >
      Clickity click
    </div>
  </div>
</button>
`;

exports[`ButtonBar should render "default" correctly 1`] = `
<div
  className="sc-htpNat jncdfk"
>
  <div
    className="mr-auto sc-htpNat cZLspC"
  >
    <button
      className="Button sc-bdVaJa bDWFJH flex-no-shrink "
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Button
        </div>
      </div>
    </button>
  </div>
  <div
    className="ml-auto sc-htpNat cISmVk"
  />
</div>
`;

exports[`ButtonBar should render "left and right" correctly 1`] = `
<div
  className="sc-htpNat jncdfk"
>
  <div
    className="mr-auto sc-htpNat cZLspC"
  >
    <button
      className="Button sc-bdVaJa bDWFJH flex-no-shrink "
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Left
        </div>
      </div>
    </button>
  </div>
  <div
    className="ml-auto sc-htpNat cISmVk"
  >
    <button
      className="Button sc-bdVaJa bDWFJH flex-no-shrink "
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Right
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`ButtonBar should render "left, right, and center" correctly 1`] = `
<div
  className="sc-htpNat jncdfk"
>
  <div
    className="flex-full flex-basis-none sc-htpNat cZLspC"
  >
    <button
      className="Button sc-bdVaJa bDWFJH flex-no-shrink "
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Left
        </div>
      </div>
    </button>
  </div>
  <div
    className="sc-htpNat jncdfk"
  >
    <button
      className="Button sc-bdVaJa bDWFJH flex-no-shrink "
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Center
        </div>
      </div>
    </button>
  </div>
  <div
    className="flex-full flex-basis-none sc-htpNat cISmVk"
  >
    <button
      className="Button sc-bdVaJa bDWFJH flex-no-shrink "
    >
      <div
        className="flex layout-centered"
        style={null}
      >
        <div
          className=""
        >
          Right
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Card should render "dark" correctly 1`] = `
<div
  className="Card-fqt8sg-0 chzUCZ"
>
  <div
    className="p4"
  >
    Look, a card!
  </div>
</div>
`;

exports[`Card should render "hoverable" correctly 1`] = `
<div
  className="Card-fqt8sg-0 kBvxHu"
>
  <div
    className="p4"
  >
    Look, a card!
  </div>
</div>
`;

exports[`Card should render "normal" correctly 1`] = `
<div
  className="Card-fqt8sg-0 eNUvwM"
>
  <div
    className="p4"
  >
    Look, a card!
  </div>
</div>
`;

exports[`CheckBox should render "Default - Off" correctly 1`] = `
<div
  className="flex align-center justify-center rounded cursor-pointer"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "white",
      "border": "2px solid #C7CFD4",
      "height": 16,
      "width": 16,
    }
  }
/>
`;

exports[`CheckBox should render "Green" correctly 1`] = `
<div
  className="flex align-center justify-center rounded cursor-pointer"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#88BF4D",
      "border": "2px solid #88BF4D",
      "height": 16,
      "width": 16,
    }
  }
>
  <svg
    className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
    fill="currentcolor"
    height={12}
    style={
      Object {
        "color": "white",
      }
    }
    viewBox="0 0 32 32"
    width={12}
  >
    <path
      d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
    />
  </svg>
</div>
`;

exports[`CheckBox should render "On - Default blue" correctly 1`] = `
<div
  className="flex align-center justify-center rounded cursor-pointer"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#509EE3",
      "border": "2px solid #509EE3",
      "height": 16,
      "width": 16,
    }
  }
>
  <svg
    className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
    fill="currentcolor"
    height={12}
    style={
      Object {
        "color": "white",
      }
    }
    viewBox="0 0 32 32"
    width={12}
  >
    <path
      d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
    />
  </svg>
</div>
`;

exports[`CheckBox should render "Purple" correctly 1`] = `
<div
  className="flex align-center justify-center rounded cursor-pointer"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#A989C5",
      "border": "2px solid #A989C5",
      "height": 16,
      "width": 16,
    }
  }
>
  <svg
    className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
    fill="currentcolor"
    height={12}
    style={
      Object {
        "color": "white",
      }
    }
    viewBox="0 0 32 32"
    width={12}
  >
    <path
      d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
    />
  </svg>
</div>
`;

exports[`CheckBox should render "Red" correctly 1`] = `
<div
  className="flex align-center justify-center rounded cursor-pointer"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#EF8C8C",
      "border": "2px solid #EF8C8C",
      "height": 16,
      "width": 16,
    }
  }
>
  <svg
    className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
    fill="currentcolor"
    height={12}
    style={
      Object {
        "color": "white",
      }
    }
    viewBox="0 0 32 32"
    width={12}
  >
    <path
      d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
    />
  </svg>
</div>
`;

exports[`CheckBox should render "Yellow" correctly 1`] = `
<div
  className="flex align-center justify-center rounded cursor-pointer"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#F9D45C",
      "border": "2px solid #F9D45C",
      "height": 16,
      "width": 16,
    }
  }
>
  <svg
    className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
    fill="currentcolor"
    height={12}
    style={
      Object {
        "color": "white",
      }
    }
    viewBox="0 0 32 32"
    width={12}
  >
    <path
      d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
    />
  </svg>
</div>
`;

exports[`EntityMenu should render "Edit menu" correctly 1`] = `
<div
  className="flex flex-full"
>
  <div
    className="flex align-center ml-auto"
  >
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          className="Icon Icon-pencil Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          height={18}
          viewBox="0 0 32 32"
          width={18}
        >
          <path
            d="M26.87 12.988L19.8 5.917l4.033-4.034a2 2 0 0 1 2.829 0l4.243 4.243a2 2 0 0 1 0 2.828l-4.034 4.034zm-1.414 1.414L10.65 29.21a3 3 0 0 1-1.468.807l-7.246 1.617a1 1 0 0 1-1.179-1.254l1.99-6.882a3 3 0 0 1 .761-1.288L18.385 7.331l7.071 7.071z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
  </div>
</div>
`;

exports[`EntityMenu should render "More menu" correctly 1`] = `
<div
  className="flex flex-full"
>
  <div
    className="flex align-center ml-auto"
  >
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          className="Icon Icon-burger Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          height={18}
          viewBox="0 0 32 32"
          width={18}
        >
          <path
            d="M2.5 3.6h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 0 1 0-5zm0 9.931h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 1 1 0-5zm0 9.931h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 0 1 0-5z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
  </div>
</div>
`;

exports[`EntityMenu should render "Multiple menus" correctly 1`] = `
<div
  className="flex flex-full"
>
  <div
    className="flex align-center ml-auto"
  >
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          className="Icon Icon-pencil Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          height={18}
          viewBox="0 0 32 32"
          width={18}
        >
          <path
            d="M26.87 12.988L19.8 5.917l4.033-4.034a2 2 0 0 1 2.829 0l4.243 4.243a2 2 0 0 1 0 2.828l-4.034 4.034zm-1.414 1.414L10.65 29.21a3 3 0 0 1-1.468.807l-7.246 1.617a1 1 0 0 1-1.179-1.254l1.99-6.882a3 3 0 0 1 .761-1.288L18.385 7.331l7.071 7.071z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          className="Icon Icon-share Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          fillRule="evenodd"
          height={18}
          viewBox="0 0 32 41"
          width={18}
        >
          <path
            d="M13.714 8.96H9.143L16 0l6.857 8.96h-4.571v19.16h-4.572V8.96zM4.571 32.52a4 4 0 0 0 4 4H23.43a4 4 0 0 0 4-4V20.36a4 4 0 0 0-4-4h-.572v-4.48H28a4 4 0 0 1 4 4V37a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V15.88a4 4 0 0 1 4-4h5.143v4.48H8.57a4 4 0 0 0-4 4v12.16z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          className="Icon Icon-burger Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          height={18}
          viewBox="0 0 32 32"
          width={18}
        >
          <path
            d="M2.5 3.6h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 0 1 0-5zm0 9.931h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 1 1 0-5zm0 9.931h27a2.5 2.5 0 1 1 0 5h-27a2.5 2.5 0 0 1 0-5z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
  </div>
</div>
`;

exports[`EntityMenu should render "Share menu" correctly 1`] = `
<div
  className="flex flex-full"
>
  <div
    className="flex align-center ml-auto"
  >
    <div
      className="relative"
    >
      <div
        className="Icon__IconWrapper-sc-1x67v3y-0 ivWlTW"
        onClick={[Function]}
      >
        <svg
          className="Icon Icon-share Icon-sc-1x67v3y-1 bcaYRA"
          fill="currentcolor"
          fillRule="evenodd"
          height={18}
          viewBox="0 0 32 41"
          width={18}
        >
          <path
            d="M13.714 8.96H9.143L16 0l6.857 8.96h-4.571v19.16h-4.572V8.96zM4.571 32.52a4 4 0 0 0 4 4H23.43a4 4 0 0 0 4-4V20.36a4 4 0 0 0-4-4h-.572v-4.48H28a4 4 0 0 1 4 4V37a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V15.88a4 4 0 0 1 4-4h5.143v4.48H8.57a4 4 0 0 0-4 4v12.16z"
          />
        </svg>
      </div>
      <span
        className="hide"
      />
    </div>
  </div>
</div>
`;

exports[`ModalContent should render "default" correctly 1`] = `
<div
  className="rounded bordered"
>
  <div
    className="ModalContent flex-full flex flex-column relative"
    id={undefined}
  >
    <svg
      className="Icon Icon-close text-light text-medium-hover cursor-pointer absolute z2 m2 p2 top right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={16}
      onClick={[Function]}
      viewBox="0 0 32 32"
      width={16}
    >
      <path
        d="M4 8 L8 4 L16 12 L24 4 L28 8 L20 16 L28 24 L24 28 L16 20 L8 28 L4 24 L12 16 z "
      />
    </svg>
    <div
      className="ModalHeader flex-no-shrink px4 py4 full"
    >
      <h2
        className="text-bold mr4"
      >
        Do something crazy?
      </h2>
    </div>
    <div
      className="ModalBody px4"
    >
      <div
        className="flex-full ml-auto mr-auto flex flex-column"
        style={
          Object {
            "maxWidth": undefined,
          }
        }
      >
        Are you sure?
      </div>
    </div>
    <div
      className="ModalFooter flex flex-no-shrink px4 py3"
    >
      <div
        className="ml-auto flex align-center"
        style={
          Object {
            "maxWidth": undefined,
          }
        }
      >
        <span
          className="ml2"
        >
          <button
            className="Button sc-bdVaJa bDWFJH flex-no-shrink Button--danger"
          >
            <div
              className="flex layout-centered"
              style={null}
            >
              <div
                className=""
              >
                Ok
              </div>
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeading should render "normal" correctly 1`] = `
<h1
  className="PageHeading-sc-5mtbjo-0 bnzsQf"
>
  Hello World
</h1>
`;

exports[`Position should render "Absolute" correctly 1`] = `
<div
  className="yz785l-0-Position-kiwZOl ewxBZI sc-bwzfXH kLwrie"
>
  Some content
  <div
    className="yz785l-0-Position-kiwZOl bzliMT sc-bwzfXH gZPQmB"
  >
    Some content positioned absolutely to its parent
  </div>
</div>
`;

exports[`Position should render "Relative" correctly 1`] = `
<div
  className="yz785l-0-Position-kiwZOl ewxBZI sc-bwzfXH ihgQcP"
>
  Some content relative to its parent
</div>
`;

exports[`ProgressBar should render "Animated" correctly 1`] = `
<div
  className="ProgressBar__ProgressWrapper-sc-11v0v62-0 jstHKb"
  color="#509EE3"
>
  <div
    className="ProgressBar__Progress-sc-11v0v62-1 dhIpua"
    width={35}
  />
</div>
`;

exports[`ProgressBar should render "Default" correctly 1`] = `
<div
  className="ProgressBar__ProgressWrapper-sc-11v0v62-0 jstHKb"
  color="#509EE3"
>
  <div
    className="ProgressBar__Progress-sc-11v0v62-1 kTuUwV"
    width={75}
  />
</div>
`;

exports[`Radio should render "bubble" correctly 1`] = `
<ul
  className="Radio__BubbleList-sc-1y1p5xd-6 glBcvi Radio__BaseList-sc-1y1p5xd-0 kGqskW"
>
  <li
    aria-selected={true}
    className="Radio__BubbleItem-sc-1y1p5xd-7 gROdwm Radio__BaseItem-sc-1y1p5xd-1 gUPocx"
    mb={null}
    mr={1}
    onClick={[Function]}
    selected={true}
  >
    <input
      checked={true}
      className="Form-radio"
      id="radio-5-0"
      name="radio-5"
      type="radio"
      value={0}
    />
    <span>
      Gadget
    </span>
  </li>
  <li
    aria-selected={false}
    className="Radio__BubbleItem-sc-1y1p5xd-7 gsefvY Radio__BaseItem-sc-1y1p5xd-1 fLjBva"
    mb={null}
    mr={null}
    onClick={[Function]}
    selected={false}
  >
    <input
      checked={false}
      className="Form-radio"
      id="radio-5-1"
      name="radio-5"
      type="radio"
      value={1}
    />
    <span>
      Gizmo
    </span>
  </li>
</ul>
`;

exports[`Radio should render "default" correctly 1`] = `
<ul
  className="Radio__NormalList-sc-1y1p5xd-2 h3 text-bold cakGpL Radio__BaseList-sc-1y1p5xd-0 kGqskW"
>
  <li
    aria-selected={true}
    className="Radio__NormalItem-sc-1y1p5xd-3 lnYbWW Radio__BaseItem-sc-1y1p5xd-1 bnxYLr"
    mb={null}
    mr={3}
    onClick={[Function]}
    selected={true}
  >
    <input
      checked={true}
      className="Form-radio"
      id="radio-1-0"
      name="radio-1"
      type="radio"
      value={0}
    />
    <span>
      Gadget
    </span>
  </li>
  <li
    aria-selected={false}
    className="Radio__NormalItem-sc-1y1p5xd-3 iIAYuU Radio__BaseItem-sc-1y1p5xd-1 kiDbHp"
    mb={null}
    mr={null}
    onClick={[Function]}
    selected={false}
  >
    <input
      checked={false}
      className="Form-radio"
      id="radio-1-1"
      name="radio-1"
      type="radio"
      value={1}
    />
    <span>
      Gizmo
    </span>
  </li>
</ul>
`;

exports[`Radio should render "show buttons" correctly 1`] = `
<ul
  className="Radio__NormalList-sc-1y1p5xd-2 cakGpL Radio__BaseList-sc-1y1p5xd-0 kGqskW"
>
  <li
    aria-selected={true}
    className="Radio__NormalItem-sc-1y1p5xd-3 lnYbWW Radio__BaseItem-sc-1y1p5xd-1 bnxYLr"
    mb={null}
    mr={3}
    onClick={[Function]}
    selected={true}
  >
    <input
      checked={true}
      className="Form-radio"
      id="radio-3-0"
      name="radio-3"
      type="radio"
      value={0}
    />
    <label
      htmlFor="radio-3-0"
    />
    <span>
      Gadget
    </span>
  </li>
  <li
    aria-selected={false}
    className="Radio__NormalItem-sc-1y1p5xd-3 iIAYuU Radio__BaseItem-sc-1y1p5xd-1 fwIeaq"
    mb={null}
    mr={null}
    onClick={[Function]}
    selected={false}
  >
    <input
      checked={false}
      className="Form-radio"
      id="radio-3-1"
      name="radio-3"
      type="radio"
      value={1}
    />
    <label
      htmlFor="radio-3-1"
    />
    <span>
      Gizmo
    </span>
  </li>
</ul>
`;

exports[`Radio should render "underlined" correctly 1`] = `
<ul
  className="Radio__UnderlinedList-sc-1y1p5xd-4 yPTIp Radio__NormalList-sc-1y1p5xd-2 Radio__UnderlinedList-sc-1y1p5xd-4 yPTIp h3 text-bold cakGpL Radio__BaseList-sc-1y1p5xd-0 kGqskW"
>
  <li
    aria-selected={true}
    className="Radio__UnderlinedItem-sc-1y1p5xd-5 kaIiHA Radio__NormalItem-sc-1y1p5xd-3 lnYbWW Radio__BaseItem-sc-1y1p5xd-1 ljpocb"
    mb={null}
    mr={3}
    onClick={[Function]}
    selected={true}
  >
    <input
      checked={true}
      className="Form-radio"
      id="radio-2-0"
      name="radio-2"
      type="radio"
      value={0}
    />
    <span>
      Gadget
    </span>
  </li>
  <li
    aria-selected={false}
    className="Radio__UnderlinedItem-sc-1y1p5xd-5 icIYCp Radio__NormalItem-sc-1y1p5xd-3 iIAYuU Radio__BaseItem-sc-1y1p5xd-1 iVApZB"
    mb={null}
    mr={null}
    onClick={[Function]}
    selected={false}
  >
    <input
      checked={false}
      className="Form-radio"
      id="radio-2-1"
      name="radio-2"
      type="radio"
      value={1}
    />
    <span>
      Gizmo
    </span>
  </li>
</ul>
`;

exports[`Radio should render "vertical" correctly 1`] = `
<ul
  className="Radio__NormalList-sc-1y1p5xd-2 cakGpL Radio__BaseList-sc-1y1p5xd-0 dVUlxC"
>
  <li
    aria-selected={true}
    className="Radio__NormalItem-sc-1y1p5xd-3 lnYbWW Radio__BaseItem-sc-1y1p5xd-1 dsZxQm"
    mb={1}
    mr={null}
    onClick={[Function]}
    selected={true}
  >
    <input
      checked={true}
      className="Form-radio"
      id="radio-4-0"
      name="radio-4"
      type="radio"
      value={0}
    />
    <label
      htmlFor="radio-4-0"
    />
    <span>
      Gadget
    </span>
  </li>
  <li
    aria-selected={false}
    className="Radio__NormalItem-sc-1y1p5xd-3 iIAYuU Radio__BaseItem-sc-1y1p5xd-1 fwIeaq"
    mb={null}
    mr={null}
    onClick={[Function]}
    selected={false}
  >
    <input
      checked={false}
      className="Form-radio"
      id="radio-4-1"
      name="radio-4"
      type="radio"
      value={1}
    />
    <label
      htmlFor="radio-4-1"
    />
    <span>
      Gizmo
    </span>
  </li>
</ul>
`;

exports[`Select should render "default" correctly 1`] = `
<a
  className="flex no-decoration"
  id={undefined}
  onClick={[Function]}
  style={undefined}
>
  <div
    className="flex-full AdminSelect flex align-center"
    style={undefined}
  >
    <span
      className="AdminSelect-content mr1"
    >
      <span>
        Entity Key
        
      </span>
    </span>
    <svg
      className="Icon Icon-chevrondown AdminSelect-chevron flex-align-right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
  </div>
  <span
    className="hide"
  />
</a>
`;

exports[`Select should render "kitchen_sink" correctly 1`] = `
<a
  className="flex no-decoration"
  id={undefined}
  onClick={[Function]}
  style={undefined}
>
  <div
    className="flex-full AdminSelect flex align-center"
    style={undefined}
  >
    <span
      className="AdminSelect-content mr1"
    >
      <span>
        Entity Key
        , 
      </span>
      <span>
        Category
        
      </span>
    </span>
    <svg
      className="Icon Icon-chevrondown AdminSelect-chevron flex-align-right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
  </div>
  <span
    className="hide"
  />
</a>
`;

exports[`Select should render "multiple" correctly 1`] = `
<a
  className="flex no-decoration"
  id={undefined}
  onClick={[Function]}
  style={undefined}
>
  <div
    className="flex-full AdminSelect flex align-center"
    style={undefined}
  >
    <span
      className="AdminSelect-content mr1"
    >
      <span>
        Entity Key
        , 
      </span>
      <span>
        Category
        
      </span>
    </span>
    <svg
      className="Icon Icon-chevrondown AdminSelect-chevron flex-align-right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
  </div>
  <span
    className="hide"
  />
</a>
`;

exports[`Select should render "search" correctly 1`] = `
<a
  className="flex no-decoration"
  id={undefined}
  onClick={[Function]}
  style={undefined}
>
  <div
    className="flex-full AdminSelect flex align-center"
    style={undefined}
  >
    <span
      className="AdminSelect-content mr1"
    >
      <span>
        Entity Key
        
      </span>
    </span>
    <svg
      className="Icon Icon-chevrondown AdminSelect-chevron flex-align-right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
  </div>
  <span
    className="hide"
  />
</a>
`;

exports[`Select should render "sections" correctly 1`] = `
<a
  className="flex no-decoration"
  id={undefined}
  onClick={[Function]}
  style={undefined}
>
  <div
    className="flex-full AdminSelect flex align-center"
    style={undefined}
  >
    <span
      className="AdminSelect-content mr1"
    >
      <span>
        Entity Key
        
      </span>
    </span>
    <svg
      className="Icon Icon-chevrondown AdminSelect-chevron flex-align-right Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 12 L16 26 L31 12 L27 8 L16 18 L5 8 z "
      />
    </svg>
  </div>
  <span
    className="hide"
  />
</a>
`;

exports[`StackedCheckBox should render "Checked with color" correctly 1`] = `
<div
  className="relative"
  style={
    Object {
      "transform": "scale(1)",
    }
  }
>
  <div
    className="flex align-center justify-center rounded cursor-pointer"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#A989C5",
        "border": "2px solid #A989C5",
        "height": 16,
        "width": 16,
      }
    }
  >
    <svg
      className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      style={
        Object {
          "color": "white",
        }
      }
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
      />
    </svg>
  </div>
  <div
    className="absolute flex align-center justify-center rounded cursor-pointer"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#A989C5",
        "border": "2px solid #A989C5",
        "height": 16,
        "left": 4,
        "top": -4,
        "width": 16,
        "zIndex": -1,
      }
    }
  />
</div>
`;

exports[`StackedCheckBox should render "Checked" correctly 1`] = `
<div
  className="relative"
  style={
    Object {
      "transform": "scale(1)",
    }
  }
>
  <div
    className="flex align-center justify-center rounded cursor-pointer"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#509EE3",
        "border": "2px solid #509EE3",
        "height": 16,
        "width": 16,
      }
    }
  >
    <svg
      className="Icon Icon-check Icon-sc-1x67v3y-1 hFNRPZ"
      fill="currentcolor"
      height={12}
      style={
        Object {
          "color": "white",
        }
      }
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
      />
    </svg>
  </div>
  <div
    className="absolute flex align-center justify-center rounded cursor-pointer"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#509EE3",
        "border": "2px solid #509EE3",
        "height": 16,
        "left": 4,
        "top": -4,
        "width": 16,
        "zIndex": -1,
      }
    }
  />
</div>
`;

exports[`StackedCheckBox should render "Off - Default" correctly 1`] = `
<div
  className="relative"
  style={
    Object {
      "transform": "scale(1)",
    }
  }
>
  <div
    className="flex align-center justify-center rounded cursor-pointer"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "2px solid #C7CFD4",
        "height": 16,
        "width": 16,
      }
    }
  />
  <div
    className="absolute flex align-center justify-center rounded cursor-pointer"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "2px solid #C7CFD4",
        "height": 16,
        "left": 4,
        "top": -4,
        "width": 16,
        "zIndex": -1,
      }
    }
  />
</div>
`;

exports[`Toggle should render "off" correctly 1`] = `
<a
  className="no-decoration"
  onClick={null}
  style={
    Object {
      "color": null,
    }
  }
/>
`;

exports[`Toggle should render "on" correctly 1`] = `
<a
  className="no-decoration"
  onClick={null}
  style={
    Object {
      "color": null,
    }
  }
/>
`;

exports[`TokenField should render "" correctly 1`] = `
<div>
  <ul
    className="pl1 pt1 pb0 pr0 flex flex-wrap bg-white scroll-x scroll-y"
    onMouseDownCapture={[Function]}
    style={
      Object {
        "maxHeight": 130,
      }
    }
  >
    <li
      className="flex-full flex align-center mr1 mb1 p1"
    >
      <input
        autoFocus={false}
        className="full no-focus borderless px1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        placeholder={undefined}
        size={10}
        style={
          Object {
            "fontSize": 14,
            "fontWeight": 700,
          }
        }
        value=""
      />
    </li>
  </ul>
  <ul
    className="pl1 my1 scroll-y scroll-show border-bottom"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "maxHeight": 300,
      }
    }
  >
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Doohickey
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Gadget
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Gizmo
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Widget
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`TokenField should render "updateOnInputChange" correctly 1`] = `
<div>
  <ul
    className="pl1 pt1 pb0 pr0 flex flex-wrap bg-white scroll-x scroll-y"
    onMouseDownCapture={[Function]}
    style={
      Object {
        "maxHeight": 130,
      }
    }
  >
    <li
      className="flex-full flex align-center mr1 mb1 p1"
    >
      <input
        autoFocus={false}
        className="full no-focus borderless px1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onPaste={[Function]}
        placeholder={undefined}
        size={10}
        style={
          Object {
            "fontSize": 14,
            "fontWeight": 700,
          }
        }
        value=""
      />
    </li>
  </ul>
  <ul
    className="pl1 my1 scroll-y scroll-show border-bottom"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "maxHeight": 300,
      }
    }
  >
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Doohickey
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Gadget
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Gizmo
        </span>
      </div>
    </li>
    <li
      className="mr1"
    >
      <div
        className="py1 pl1 pr2 block rounded text-bold text-brand-hover inline-block full cursor-pointer bg-light-hover"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span>
          Widget
        </span>
      </div>
    </li>
  </ul>
</div>
`;
